# google-ads-manager

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: TOOLS.md
google_ads_mcp/: __init__.py  auth.py  client.py  server.py
google_ads_mcp/builders/: __init__.py  operations.py
google_ads_mcp/models/: __init__.py  asset_inputs.py  common.py  creation_inputs.py  mutation_inputs.py  tool_inputs.py
google_ads_mcp/tools/: __init__.py  _helpers.py  account.py  ad_groups.py  ads.py  audiences.py  budgets.py  campaigns.py  gaql.py  hierarchy.py  (+5 more)
scripts/: get_refresh_token.py
tests/: conftest.py  test_advanced_targeting_tools.py  test_asset_inputs.py  test_asset_tools.py  test_auth.py  test_builders.py  test_builders_ad_creation.py  test_builders_asset.py  test_builders_creation.py  test_builders_extension_targeting.py  test_builders_keyword_bidding.py  test_builders_shopping.py  test_client.py  test_conversion_ops.py  test_creation_inputs.py  test_creation_tools.py  test_customer_list_ops.py  test_display_video_dg_tools.py  test_errors.py  test_formatting.py  test_helpers.py  test_keyword_bidding_extension_tools.py  test_models_common.py  test_mutation_inputs.py  test_mutation_tools_budget_kw.py  test_mutation_tools_status.py  test_mutation_tools_targeting.py  test_pagination.py  test_server.py  test_shopping_tools.py  test_tool_inputs.py  test_tools_account.py  test_tools_ad_groups.py  test_tools_ads.py  test_tools_audiences.py  test_tools_budgets.py  test_tools_campaigns.py  test_tools_gaql.py  test_tools_hierarchy.py  test_tools_keyword_planner.py  (+4 more)
(+19 files in other folders)
